# TCDFKG

./: .env.example  Makefile  pyproject.toml  readme.md  tree.txt
artifacts/: S_att.npy  tcg.json
configs/: dataset.yaml  model_anom.yaml  model_causal.yaml  training.yaml
data/kg/: SWAT_KG_Documentation.docx  SWAT_KG_Documentation_v0.2.docx  extracted_schema.json  schema_description.txt  schema_description_v0.2.txt  swat_schema.json  swat_schema.v0.1.json  swat_schema.v0.2.json
data/processed/: prepare_meta.json  test.parquet  train.parquet  val.parquet
scripts/: build_tcg.py  eval_causal.py  evaluate.py  prepare_data.py  propagate.py  run_pipeline.py  train_detector.py  visualize.py
src/tcdfkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tcdfkg/anomaly/: detector.py  mad.py  temporal_encoder.py
src/tcdfkg/causality/: delay.py  tcdf.py  tcg.py
src/tcdfkg/data/: loaders.py  preprocessing.py  windows.py
src/tcdfkg/eval/: metrics_causal.py
src/tcdfkg/kg/: __init__.py  graph_store.py  rules.py  schema.py  verification.py
src/tcdfkg/propagation/: propagate.py
src/tcdfkg/utils/: logging.py  metrics.py
src/tcdfkg/viz/: anomaly.py  attention.py  propagation.py  tcg.py  utils.py
tests/: conftest.py  test_edge_bias_attn.py  test_kg_verification.py  test_pot_threshold.py  test_tcdf_delay.py  test_tcdf_windows_guard.py
